server/k8s/restaurant-service.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
      - name: restaurant-service
        image: restaurant-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  type: NodePort
  selector:
    app: restaurant-service
  ports:
  - port: 80
    targetPort: 5007
    nodePort: 30007
